--- a/style/layout.css
+++ b/style/layout.css
@@ -1,8 +1,6 @@
 .app {
   display: grid;
   grid-template-columns: 320px 1fr;
-  /* TODO: Delete border after layout is approved. Border has presentational purpose */
-  border: 1px solid;
 }
 
 @media (max-width: 1200px) {
